# ATRI-IndexTTS-GUI

./: AGENTS.md  LICENSE  README.md  build.py  pyproject.toml
.github/workflows/: build.yml
gui/: api_client.py  app.py  utils.py  voice_manager.py
