[project]
name = "view-indextts"
version = "1.1.0"
description = "ViewIndexTTS — IndexTTS 可视化桌面客户端"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[desktop]>=0.25.0",
    "httpx>=0.28.0",
    "playsound3>=3.3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
build-gui = "build:main"

[tool.uv]
package = false
